--- a/src/app/modules/StudentSubject/student-subject-mark-comp/student-subject-mark-comp.component.html
+++ b/src/app/modules/StudentSubject/student-subject-mark-comp/student-subject-mark-comp.component.html
@@ -22,7 +22,7 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-            <button class="mat-raised-button" (click)="GetClassSubjectComponent()">
+            <button [disabled]="loading" class="mat-raised-button" (click)="GetClassSubjectComponent()">
                 <mat-icon>search</mat-icon>
             </button><br>
         </form>
@@ -68,7 +68,7 @@
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <button mat-mini-fab (click)="UpdateOrSave(element)">
+                        <button [disabled]="loading" matTooltip="save" mat-mini-fab (click)="UpdateOrSave(element)">
                             <mat-icon>save</mat-icon>
                         </button>
                     </mat-cell>
