--- a/src/app/modules/StudentSubject/studentsubjectdashboard/studentsubjectdashboard.component.html
+++ b/src/app/modules/StudentSubject/studentsubjectdashboard/studentsubjectdashboard.component.html
@@ -3,7 +3,7 @@
     <mat-card-subtitle>&nbsp;</mat-card-subtitle>
     <mat-card-content>
         <alert></alert>
-        <mat-spinner *ngIf="loading" diameter="50" style="position:relative;margin-left: 50%;"></mat-spinner>
+        <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
         <form [formGroup]="searchForm">
             <!-- <mat-form-field appearance="outline">
                 <mat-label>Batch</mat-label>
@@ -33,10 +33,10 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-            <button class="mat-raised-button" (click)="GetStudentClassSubject()">
+            <button [disabled]="loading" class="mat-raised-button" (click)="GetStudentClassSubject()">
                 <mat-icon>search</mat-icon>
             </button>
-            <button matTooltip="clear all" class="mat-raised-button" (click)="clear()">
+            <button [disabled]="loading" matTooltip="clear all" class="mat-raised-button" (click)="clear()">
                 <mat-icon>clear_all</mat-icon>
             </button>
         </form>
@@ -74,7 +74,7 @@
                 <mat-header-cell *matHeaderCellDef>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                    <button [disabled]="!element.Action" matTooltip="view/edit" mat-mini-fab
+                    <button [disabled]="loading" [disabled]="!element.Action" matTooltip="view/edit" mat-mini-fab
                         (click)="UpdateOrSave(element)">
                         <mat-icon>save</mat-icon>
                     </button>
