--- a/src/app/modules/attendance/attendance/attendance.component.html
+++ b/src/app/modules/attendance/attendance/attendance.component.html
@@ -3,7 +3,7 @@
     <mat-card-subtitle>&nbsp;</mat-card-subtitle>
     <mat-card-content>
         <alert></alert>
-        <mat-spinner *ngIf="loading" diameter="50" style="position:relative;margin-left: 50%;"></mat-spinner>
+        <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
         <form [formGroup]="searchForm">
             <mat-form-field appearance="outline">
                 <mat-label>Class</mat-label>
@@ -25,7 +25,7 @@
                 <mat-datepicker-toggle matSuffix [for]="AttendanceDate"></mat-datepicker-toggle>
                 <mat-datepicker #AttendanceDate></mat-datepicker>
             </mat-form-field>
-            <button (click)="GetStudentAttendance()" class="mat-raised-button">
+            <button [disabled]="loading" (click)="GetStudentAttendance()" class="mat-raised-button">
                 <mat-icon>search</mat-icon>
             </button>
         </form>
@@ -68,12 +68,12 @@
             </ng-container>
             <ng-container matColumnDef="Action">
                 <mat-header-cell *matHeaderCellDef>
-                    <button *ngIf="StudentAttendanceList.length>0" matTooltip="save all" mat-mini-fab (click)="saveall()">
+                    <button [disabled]="loading" *ngIf="StudentAttendanceList.length>0" matTooltip="save all" mat-mini-fab (click)="saveall()">
                         <mat-icon>all_out</mat-icon>
                     </button>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                    <button [disabled]="!element.Action" matTooltip="view/edit" mat-mini-fab
+                    <button [disabled]="loading" [disabled]="!element.Action" matTooltip="view/edit" mat-mini-fab
                         (click)="UpdateOrSave(element)">
                         <mat-icon>save</mat-icon>
                     </button>
