--- a/src/app/modules/auth/change-password/change-password.component.html
+++ b/src/app/modules/auth/change-password/change-password.component.html
@@ -37,10 +37,10 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <button class="mat-raised-button" matTooltip="change">
+                        <button [disabled]="loading" class="mat-raised-button" matTooltip="change">
                             <mat-icon>change_circle</mat-icon>
                         </button>
-                        <button (click)="gotohome()" class="mat-raised-button" matTooltip="cancel">
+                        <button [disabled]="loading" (click)="gotohome()" class="mat-raised-button" matTooltip="cancel">
                             <mat-icon>cancel</mat-icon>
                         </button>
                     </div>
