--- a/src/app/modules/control/roleuser/roleuseradd/roleuseradd.component.html
+++ b/src/app/modules/control/roleuser/roleuseradd/roleuseradd.component.html
@@ -31,10 +31,10 @@
         </form>
     </mat-card-content>
     <mat-card-actions style="margin-left: 0px;" fxLayout="row" fxLayoutAlign="center center">
-        <button class="mat-raised-button" (click)="UpdateOrSave()">
+        <button [disabled]="loading" class="mat-raised-button" (click)="UpdateOrSave()">
             <mat-icon>save</mat-icon>
         </button>
-        <button class="mat-raised-button" (click)="back()">
+        <button [disabled]="loading" class="mat-raised-button" (click)="back()">
             <mat-icon>cancel</mat-icon>
         </button>
     </mat-card-actions>
