--- a/src/app/modules/dynamicMultiLevelMenu/MultiLevelMenu.component.html
+++ b/src/app/modules/dynamicMultiLevelMenu/MultiLevelMenu.component.html
@@ -1,5 +1,5 @@
 
-<mat-spinner *ngIf="loading"></mat-spinner>
+<mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <div style="border-radius: 2rem;padding-top: 15px;">
   <!-- <ng-material-multilevel-menu [configuration]='config' [items]='appitem' (selectedItem)="selectedItem($event)">
   </ng-material-multilevel-menu> -->
