--- a/src/app/modules/studentexam/examdashboard/examdashboard.component.html
+++ b/src/app/modules/studentexam/examdashboard/examdashboard.component.html
@@ -1,6 +1,6 @@
-<div class="container" fxLayout="row" fxLayoutAlign="space-around center">
+<div fxLayout="row" fxLayoutAlign="space-around center">
     <mat-tab-group #changeEvent [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChanged($event)"
-    class="demo-tab-group">
+    >
     <mat-tab>
         <ng-template mat-tab-label>
             <mat-icon>info</mat-icon>Exams
