--- a/src/app/modules/FeesManagement/StudentDocument/uploadstudentdocument/uploadstudentdoc.component.html
+++ b/src/app/modules/FeesManagement/StudentDocument/uploadstudentdocument/uploadstudentdoc.component.html
@@ -17,7 +17,7 @@
             </mat-form-field>
         </div>
         <span fxLayout="row" fxLayoutAlign="space-between center">
-            <button type="submit" (click)="uploadFile()" matTooltip="upload file" class="mat-raised-button">
+            <button [disabled]="loading" type="submit" (click)="uploadFile()" matTooltip="upload file" class="mat-raised-button">
                 <mat-icon aria-label="file_upload">file_upload</mat-icon>
             </button>&nbsp;&nbsp;
         </span>
@@ -50,7 +50,7 @@
         <ng-container matColumnDef="Action">
             <mat-header-cell *matHeaderCellDef> </mat-header-cell>
             <mat-cell (click)="pageview(element.path)" *matCellDef="let element">
-                <button mat-mini-fab>
+                <button [disabled]="loading" mat-mini-fab>
                     <mat-icon>pageview</mat-icon>
                 </button>
             </mat-cell>
