--- a/src/app/modules/FeesManagement/shared/header/feeheader.component.html
+++ b/src/app/modules/FeesManagement/shared/header/feeheader.component.html
@@ -3,11 +3,11 @@
         <!-- <div> -->
 
         <div class="item">
-            <button mat-button (click)="toggleSideBar()">
+            <button [disabled]="loading" mat-button (click)="toggleSideBar()">
                 <mat-icon *ngIf="toggle">chevron_right</mat-icon>
                 <mat-icon *ngIf="!toggle">chevron_left</mat-icon>
             </button>
-            <button mat-button (click)="home()">
+            <button [disabled]="loading" mat-button (click)="home()">
                 <span style="color:white">ST. PAUL'S INSTITUTE</span>
             </button>
         </div>
@@ -28,31 +28,31 @@
             <span style="font-size: small;" *ngIf="userName.length>0"> Hello,
                 {{userName}}</span>
             <!-- <div *ngIf="loggedIn" style="font-size: medium;">|</div> -->
-            <button mat-button (click)="newsNEvents()">
+            <button [disabled]="loading" mat-button (click)="newsNEvents()">
                 <mat-icon>announcement</mat-icon><span style="color: white;">News & Events</span>
             </button>
-            <button mat-button [matMenuTriggerFor]="contact">
+            <button [disabled]="loading" mat-button [matMenuTriggerFor]="contact">
                 <mat-icon>contact_support</mat-icon>
             </button>
             <mat-menu #contact="matMenu">
-                <button mat-menu-item (click)="contactus()">
+                <button [disabled]="loading" mat-menu-item (click)="contactus()">
                     <mat-icon>login</mat-icon>Contact Us
                 </button>
             </mat-menu>
-            <button mat-icon-button [matMenuTriggerFor]="menu" matTooltip="login">
+            <button [disabled]="loading" mat-icon-button [matMenuTriggerFor]="menu" matTooltip="login">
                 <mat-icon>account_circle</mat-icon>
             </button>
             <mat-menu #menu="matMenu">
-                <button mat-menu-item *ngIf="!loggedIn" (click)="gotoLogin()">
+                <button [disabled]="loading" mat-menu-item *ngIf="!loggedIn" (click)="gotoLogin()">
                     <mat-icon>login</mat-icon>login
                 </button>
-                <button mat-menu-item *ngIf="!loggedIn" (click)="createlogin()">
+                <button [disabled]="loading" mat-menu-item *ngIf="!loggedIn" (click)="createlogin()">
                     <mat-icon>create</mat-icon>Create login
                 </button>
-                <button mat-menu-item *ngIf="loggedIn" (click)="changepassword()">
+                <button [disabled]="loading" mat-menu-item *ngIf="loggedIn" (click)="changepassword()">
                     <mat-icon>change_circle</mat-icon>Change password
                 </button>
-                <button mat-menu-item *ngIf="loggedIn" (click)="logout()">
+                <button [disabled]="loading" mat-menu-item *ngIf="loggedIn" (click)="logout()">
                     <mat-icon>logout</mat-icon>logout
                 </button>
             </mat-menu>
