--- a/src/app/modules/FeesManagement/studentclass/addstudentclass/addstudentclass.component.html
+++ b/src/app/modules/FeesManagement/studentclass/addstudentclass/addstudentclass.component.html
@@ -88,10 +88,10 @@
     </form>
 <!-- </div> -->
 <mat-card-actions fxLayout="row" fxLayoutAlign="center center">
-    <button class="mat-raised-button" (click)="UpdateOrSave()">
+    <button [disabled]="loading" class="mat-raised-button" (click)="UpdateOrSave()">
         <mat-icon>save</mat-icon>
     </button>
-    <button class="mat-raised-button" (click)="back()">
+    <button [disabled]="loading" class="mat-raised-button" (click)="back()">
         <mat-icon>cancel</mat-icon>
     </button>
 </mat-card-actions>
