--- a/src/app/modules/control/roleapppermission/RoleAppPermissiondashboard/RoleAppPermissiondashboard.component.html
+++ b/src/app/modules/control/roleapppermission/RoleAppPermissiondashboard/RoleAppPermissiondashboard.component.html
@@ -1,7 +1,7 @@
 <mat-card class="boxes">
     <mat-card-title> Role Application Feature Permission</mat-card-title>
     <mat-card-content>
-        <mat-spinner *ngIf="loading"></mat-spinner>
+        <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
         <alert></alert>
         <br>
         <form [formGroup]="searchForm">
@@ -32,7 +32,7 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                <button matTooltip="search" class="mat-raised-button" (click)="GetApplicationFeatureRole()" fxFlex="10">
+                <button [disabled]="loading" matTooltip="search" class="mat-raised-button" (click)="GetApplicationFeatureRole()" fxFlex="10">
                     <mat-icon>search</mat-icon>
                 </button>
                 <div fxFlex>&nbsp;</div>
@@ -83,9 +83,9 @@
                     <mat-header-cell *matHeaderCellDef>              
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="currentPermission=='read'" matTooltip="view/edit" mat-mini-fab
+                        <button [disabled]="loading" [disabled]="currentPermission=='read' || loading" matTooltip="view/edit" mat-mini-fab
                             (click)="UpdateOrSave(element)">
-                            <mat-icon>save</mat-icon>
+                            <mat-icon *ngIf="!loading">save</mat-icon>
                         </button>
                     </mat-cell>
                 </ng-container>
