--- a/src/app/modules/control/roleapppermission/roleappadd/roleappadd.component.html
+++ b/src/app/modules/control/roleapppermission/roleappadd/roleappadd.component.html
@@ -2,7 +2,7 @@
     <mat-card-title>Edit Application Role Permission</mat-card-title>
     <mat-card-content>
         <alert></alert>
-        <mat-spinner *ngIf="loading"></mat-spinner>
+        <mat-spinner *ngIf="loading" style="position:relative;margin-left: 50%;"></mat-spinner>
         <br>
         <form [formGroup]="AppRoleForm">
             <div fxLayout="column" fxLayoutAlign="center center" fxLayout.xs="column">
@@ -45,10 +45,10 @@
         </form>
     </mat-card-content>
     <mat-card-actions fxLayout="row" fxLayoutAlign="center center">
-        <button class="mat-raised-button" (click)="UpdateOrSave()">
+        <button [disabled]="loading" class="mat-raised-button" (click)="UpdateOrSave()">
             <mat-icon>save</mat-icon>
         </button>
-        <button class="mat-raised-button" (click)="back()">
+        <button [disabled]="loading" class="mat-raised-button" (click)="back()">
             <mat-icon>cancel</mat-icon>
         </button>
     </mat-card-actions>
