--- a/src/app/modules/define-pages/pageDashboard/pageDashboard.component.html
+++ b/src/app/modules/define-pages/pageDashboard/pageDashboard.component.html
@@ -1,10 +1,10 @@
 
 <mat-card>
-  <div class="text-right"><button class="mat-raised-button" (click)="createpage()">Create new page</button></div>
+  <div class="text-right"><button [disabled]="loading" class="mat-raised-button" (click)="createpage()">Create new page</button></div>
   <mat-card-title>Manage Page</mat-card-title>
   <mat-card-subtitle></mat-card-subtitle>
   <mat-card-content fxLayout="column">
-    <mat-spinner *ngIf="loading"></mat-spinner>
+    <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <alert></alert>
     <div>
       <mat-form-field>
@@ -55,11 +55,11 @@
           <th mat-header-cell *matHeaderCellDef> </th>
           <td mat-cell *matCellDef="let element">
             <div class="row">
-              <button class="mat-raised-button" matTooltip="edit"
+              <button [disabled]="loading" class="mat-raised-button" matTooltip="edit"
                 (click)="view(element.PageId,element.PageTitle,element.ParentId)">
                 <mat-icon>edit</mat-icon>
               </button>
-              <button (click)="del(element,$event)">
+              <button [disabled]="loading" (click)="del(element,$event)">
                 <mat-icon>delete</mat-icon>
               </button>
             </div>
@@ -67,8 +67,8 @@
         </ng-container>
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;">
-          <!-- <button (click)="edit()">Edit</button>
-        <button (click)="cancelOrDelete()">Cancel</button> -->
+          <!-- <button [disabled]="loading" (click)="edit()">Edit</button>
+        <button [disabled]="loading" (click)="cancelOrDelete()">Cancel</button> -->
         </mat-row>
       </mat-table>
 
