--- a/src/app/modules/define-pages/texteditor/texteditor.component.html
+++ b/src/app/modules/define-pages/texteditor/texteditor.component.html
@@ -2,7 +2,7 @@
     <mat-card-title>Define Page</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content fxLayout="column">
-        <mat-spinner *ngIf="loading"></mat-spinner>
+        <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
         <alert></alert>
         <form [formGroup]="PageDetailForm">
             <div class="row">
@@ -28,13 +28,13 @@
                     </mat-checkbox>&nbsp; Has Submenu &nbsp;&nbsp;
                 </div>
                 <div>
-                    <button class="mat-raised-button" matTooltip="save as draft" style="justify-items:center"
+                    <button [disabled]="loading" class="mat-raised-button" matTooltip="save as draft" style="justify-items:center"
                         type="button" (click)="onSaveAsDraft()" [disabled]="PageDetailForm.invalid">
                         <mat-icon aria-label="drafts">drafts</mat-icon>
                     </button>
                 </div>
                 <div class="column">
-                    <button class="mat-raised-button" matTooltip="publish" type="button" (click)="onSubmit()"
+                    <button [disabled]="loading" class="mat-raised-button" matTooltip="publish" type="button" (click)="onSubmit()"
                         [disabled]="PageDetailForm.invalid">
                         <mat-icon aria-label="publish">publish</mat-icon>
                     </button>
@@ -51,19 +51,19 @@
 
                     </div>
                     <div class="buttons" fxLayout="row" fxLayoutAlign="start center">
-                        <!-- <button *ngIf="!Edit" class="mat-raised-button" matTooltip="update photo" color="primary"
+                        <!-- <button [disabled]="loading" *ngIf="!Edit" class="mat-raised-button" matTooltip="update photo" color="primary"
                             (click)="edit()">
                             <mat-icon>edit</mat-icon>
                         </button> -->
-                        <button *ngIf="imgURL.length>0" class="mat-raised-button" [disabled]="processing"
+                        <button [disabled]="loading" *ngIf="imgURL.length>0" class="mat-raised-button" [disabled]="processing"
                             matTooltip="delete photo" color="primary" (click)="delete()">
                             <mat-icon>delete</mat-icon>
                         </button>
-                        <button class="mat-raised-button" matTooltip="select file" color="primary"
+                        <button [disabled]="loading" class="mat-raised-button" matTooltip="select file" color="primary"
                             (click)="inputfile.click()">
                             <mat-icon aria-label="photo">photo</mat-icon>
                         </button>&nbsp;&nbsp;
-                        <button type="submit" *ngIf="imageCount>0" [disabled]="processing"
+                        <button [disabled]="loading" type="submit" *ngIf="imageCount>0" [disabled]="processing"
                             (click)="uploadFile()" matTooltip="upload file" class="mat-raised-button">
                             <mat-icon aria-label="file_upload">file_upload</mat-icon>
                         </button>&nbsp;&nbsp;
@@ -78,7 +78,7 @@
             </div>
             <br>
             <div class="row">
-                <button type="button" (click)="dashboard()" class="mat-raised-button">
+                <button [disabled]="loading" type="button" (click)="dashboard()" class="mat-raised-button">
                     <mat-icon aria-label="arrow_back">arrow_back</mat-icon>
                 </button>
             </div>
