--- a/src/app/modules/photogallery/albums/albums.component.html
+++ b/src/app/modules/photogallery/albums/albums.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <mat-card-title style="padding: 20px;">Manage Files/Folders</mat-card-title>
     <mat-card-content>
-        <mat-spinner *ngIf="loading"></mat-spinner>
+        <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
         <br>
         <form [formGroup]="searchForm">
             <div class="example-header" fxLayout="row" fxLayoutAlign="space-between center">
@@ -9,7 +9,7 @@
                     <mat-label>Enter folder name</mat-label>
                     <input matInput formControlName="UpdatedFileFolderName" autocomplete="off">
                 </mat-form-field>
-                <button class="mat-raised-button" (click)="getFiles(null,'search')" fxFlex="10">
+                <button [disabled]="loading" class="mat-raised-button" (click)="getFiles(null,'search')" fxFlex="10">
                     <mat-icon>search</mat-icon>
                 </button>
                 <div fxFlex>&nbsp;</div>
@@ -42,24 +42,24 @@
                 <ng-container matColumnDef="Copy">
                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <button [cdkCopyToClipboard]="element.FilePath" (click)="message()" mat-icon-button
+                        <button [disabled]="loading" [cdkCopyToClipboard]="element.FilePath" (click)="message()" mat-icon-button
                             matTooltip="copy link">
                             <mat-icon>content_copy</mat-icon>
                         </button>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="View">
-                    <mat-header-cell *matHeaderCellDef> <button mat-button matTooltip="1 level up"
+                    <mat-header-cell *matHeaderCellDef> <button [disabled]="loading" mat-button matTooltip="1 level up"
                             (click)="getFiles(null,'up')">
                             <mat-icon>undo</mat-icon>
                         </button>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <button [id]="element.FileId" mat-icon-button color="" [name]="element.UpdatedFileFolderName"
+                        <button [disabled]="loading" [id]="element.FileId" mat-icon-button color="" [name]="element.UpdatedFileFolderName"
                             matTooltip="delete" #button (click)="updateActive(button,element)">
                             <mat-icon aria-label="delete">delete</mat-icon>
                         </button>&nbsp;
-                        <button [id]="element.FileId" mat-icon-button color="" [name]="element.UpdatedFileFolderName"
+                        <button [disabled]="loading" [id]="element.FileId" mat-icon-button color="" [name]="element.UpdatedFileFolderName"
                             matTooltip="view" #view (click)="getFiles(element,'open')">
                             <mat-icon aria-label="photo">pageview</mat-icon>
                         </button>
@@ -80,7 +80,7 @@
                 </div>
                 <div fxFlex="10">{{album.UploadDate|date:'dd/MM/yyyy'}}</div>
                 <div fxFlex="5" *ngIf="album.FilePath.length>0">
-                    <button [cdkCopyToClipboard]="album.FilePath" (click)="message()" mat-icon-button
+                    <button [disabled]="loading" [cdkCopyToClipboard]="album.FilePath" (click)="message()" mat-icon-button
                         matTooltip="copy link">
                         <mat-icon>content_copy</mat-icon>
                     </button>
