--- a/src/app/modules/photogallery/photobrowser/photobrowser.component.html
+++ b/src/app/modules/photogallery/photobrowser/photobrowser.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-title style="color:blanchedalmond;">Photo Gallery</mat-card-title>
   <mat-card-content>
-    <mat-spinner *ngIf="loading"></mat-spinner>
+    <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <mat-form-field appearance="outline">
       <input matInput (keyup)="applyFilter($any($event.target).value)" placeholder="Search album" autocomplete="off">
     </mat-form-field>
