--- a/src/app/modules/studentexam/exams/exams.component.html
+++ b/src/app/modules/studentexam/exams/exams.component.html
@@ -2,23 +2,16 @@
     <div style="padding:15px 15px 0px 15px;">
         <div><strong>Exams</strong></div>
     </div>
-    <mat-spinner *ngIf="loading" diameter="50" style="position:relative;margin-left: 50%;"></mat-spinner>
+    <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <alert></alert>
     <div style="padding: 15px;" fxLayout="row wrap">
         <div style="width: 100%;">
             <mat-table #table [dataSource]="dataSource">
-                <ng-container matColumnDef="ExamNameId">
+                <ng-container matColumnDef="ExamName">
                     <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Exam Name
                     </mat-header-cell>
                     <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
-                        <mat-form-field [style.width.px]="150">
-                            <mat-select [(value)]="element.ExamNameId" [(ngModel)]="element.ExamNameId">
-                                <mat-option value="0">--exam--</mat-option>
-                                <mat-option *ngFor="let item of ExamNames" [value]="item.MasterDataId">
-                                    {{item.MasterDataName}}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
+                        {{element.ExamName}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="StartDate">
@@ -53,12 +46,12 @@
                 </ng-container>
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef>
-                        <!-- <button matTooltip="add new" mat-mini-fab (click)="addnew()">
+                        <!-- <button [disabled]="loading" matTooltip="add new" mat-mini-fab (click)="addnew()">
                             <mat-icon>add</mat-icon>
                         </button> -->
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button matTooltip="view/edit" mat-mini-fab (click)="UpdateOrSave(element)">
+                        <button [disabled]="loading" matTooltip="save" mat-mini-fab (click)="UpdateOrSave(element)">
                             <mat-icon>save</mat-icon>
                         </button>
                     </mat-cell>
