--- a/src/app/shared/components/landingpage/landingpage.component.html
+++ b/src/app/shared/components/landingpage/landingpage.component.html
@@ -7,7 +7,7 @@
     </div>
     <span class="name">St. Paul's Institute</span>
     <div class="enter">
-        <button (click)="home()" class="button buttonon">ENTER</button>
+        <button [disabled]="loading" (click)="home()" class="button buttonon">ENTER</button>
     </div>
     
         <img src="../../../../assets/images/schooltop.png" width="100%" style="margin-top: -100px;opacity: 1.2;">
